--- a/src/document.scss
+++ b/src/document.scss
@@ -226,6 +226,9 @@ a {
   width: 388px;
   height: 160px;
 }
+.docs-mt32 {
+  margin-top: 32px;
+}
 .docs-mt24 {
   margin-top: 24px;
 }
@@ -242,8 +245,8 @@ a {
 }
 .doc-code-sec {
   margin: 0 0 30px 0;
-  background-color: #F8F8F8;
-  border: 1px solid #EFEFEF;
+  background-color: #f8f8f8;
+  border: 1px solid #efefef;
   padding: 16px 20px;
   min-height: 64px;
   line-height: 30px;
