--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -1,7 +1,29 @@
 <div class="docs-example-viewer-wrapper">
 
-  <div class="docs-example-viewer-body">
-    <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template>
+  <div class="docs-example-platform">
+
+
+    <button mat-icon-button *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index" (click)="platform = item;">
+      <mat-icon [ngClass]="{'active': platform == item }">{{item}}</mat-icon>
+    </button>
+
+  </div>
+
+
+
+  <div class="docs-example-viewer-body" #exampleViewBody>
+
+    <!-- <iframe #iframe frameborder="0" height="100%" 
+      [ngClass]="{
+        'doc-example-viewer-phone': platform == 'phone_iphone',
+        'doc-example-viewer-tablet': platform == 'tablet_mac',
+        'doc-example-viewer-desktop': platform == 'desktop_mac'
+      }">
+
+    </iframe> -->
+
+    <ng-container *ngComponentOutlet="exampleData.component"></ng-container>
+    <!-- <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template> -->
   </div>
 
   <div class="docs-example-viewer-source">
@@ -9,9 +31,8 @@
       <!-- TODO(jelbourn): don't hard-code the html + ts + css structure -->
       <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension">
         <div class="docs-example-source-wrapper">
-          <button mat-icon-button type="button" class="docs-example-source-copy"
-                  title="Copy example source" aria-label="Copy example source to clipboard"
-                  (click)="copySource(viewer.textContent)">
+          <button mat-icon-button type="button" class="docs-example-source-copy" title="Copy example source" aria-label="Copy example source to clipboard"
+            (click)="copySource(viewer.textContent)">
             <img src="assets/img/copy-icon.svg" alt="">
           </button>
           <pre class="docs-example-source"><doc-viewer
