--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -74,7 +74,7 @@
             display: inline-flex;
             vertical-align: middle;
             text-decoration: none;
-            color: #7f5eba;
+            color: #FF4E00;
           }
         }       
       }
