--- a/libs/components/select/viz-select.component.html
+++ b/libs/components/select/viz-select.component.html
@@ -1,4 +1,4 @@
-<div class="select-dropdown">
+<!-- <div class="select-dropdown">
   <form class="vizient-input">
     <mat-form-field class="form-full-width"
                     [ngClass]="{'mat-focused': menuShown}"
@@ -30,4 +30,13 @@
       </mat-list>
     </div>
   </mat-menu>
-</div>
+</div> -->
+
+
+
+<mat-form-field class="example-form-field">
+  <input matInput type="text" placeholder="Clearable input" [value]="value">
+  <button class="select-direction" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+    <mat-icon >arrow_drop_up</mat-icon>
+  </button>
+</mat-form-field>
