--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -18,6 +18,19 @@
   }
 }
 
+.docs-example-platform {
+  float: right;
+  margin-top: 8px;
+  margin-right: 24px;
+  color: #c3c3c3;
+  .mat-icon-button {
+    // margin-left: 12px;
+  }
+  .active {
+    color: #000000;
+  }
+}
+
 .docs-example-viewer-title {
   align-content: center;
   align-items: center;
@@ -34,7 +47,7 @@
   position: absolute;
   top: 12px;
   right: 10px;
-  color: #C3C3C3;
+  color: #c3c3c3;
   mat-icon {
     height: 16px;
     width: 16px;
@@ -45,7 +58,7 @@
 .docs-example-viewer-source {
   ::ng-deep {
     .mat-tab-body-wrapper {
-      background: #F8F8F8;
+      background: #f8f8f8;
     }
   }
 }
@@ -63,6 +76,19 @@
 
 .docs-example-viewer-body {
   padding: 60px 0;
+  white-space: nowrap;
   text-align: center;
   border-bottom: 1px solid #efefef;
+  width: 100%;
+  overflow-x: scroll;
+}
+
+.doc-example-viewer-phone {
+  width: 375px
+}
+.doc-example-viewer-tablet {
+  width: 768px
+}
+.doc-example-viewer-desktop {
+  width: 1200px
 }
