--- a/libs/components/header/viz-header.component.html
+++ b/libs/components/header/viz-header.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="navbar-right">
       <div class="navbar-welcome" (click)='rightBtnOnClick()' *ngIf="type === 'primary'">
-        <span>Welcome, {{userName}}</span>
+        <span>{{userName}}</span>
         <mat-icon>{{isDrop? "arrow_drop_up":"arrow_drop_down"}}</mat-icon>
       </div>
       <div class="navbar-hamburger" (click)='hamburgerOnClick()'>
