--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -77,7 +77,30 @@
         <td>string</td>
         <td>primary</td>
       </tr>
-     
+      <tr>
+        <td>badge</td>
+        <td>Badge of more button.</td>
+        <td>number</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>rightBtnClick</td>
+        <td>The callback function that is triggered when right button is pressed.</td>
+        <td>function(e)</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>hamburgerClick</td>
+        <td>The callback function that is triggered when hamburger button is pressed.</td>
+        <td>function(e)</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>moreClick</td>
+        <td>The callback function that is triggered when more button is pressed.</td>
+        <td>function(e)</td>
+        <td></td>
+      </tr>
     </tbody>
   </table>
   <div class="doc-divider"></div>
