--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -62,6 +62,20 @@
     .navbar-right {
       display: flex;
       flex-direction: row;
+      align-items: center;
+      .more {
+        @media (max-width: 991px) {
+          display: none;
+        }
+        padding: 24px;
+        border-left: 1px #E9E9E9 solid;
+        border-right: 1px #E9E9E9 solid;
+        margin-right: 32px;
+        cursor: pointer;
+        .mat-icon { 
+          color: #ff4e00;
+        }
+      }
       .navbar-welcome {
         @media (max-width: 991px) {
           display: none;
