--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -80,7 +80,8 @@
   text-align: center;
   border-bottom: 1px solid #efefef;
   width: 100%;
-  overflow-x: scroll;
+  // overflow-x: scroll;
+  overflow: auto;
 }
 
 .doc-example-viewer-phone {
