1. update landing page SVG 2. fix some footer style

--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -3,7 +3,8 @@
     background: #ffffff;
     border-top: 1px solid #e5e5e5;
     position: relative;
-    min-height: 80px;
+    // min-height: 72px;
+    // min-height: 80px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -13,9 +14,9 @@
 
   .footer-center {
     z-index: 1;
-    position: absolute;
+    // position: absolute;
     top: 48px;
-    height: 48px;
+    // height: 48px;
     left: 0;
     right: 0;
     text-align: center;
