--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -5,7 +5,8 @@
   .nav-bar {
     background: #ffffff;
     z-index: 10;
-    box-shadow: 0 1px 0 0 #e9e9e9;
+    // box-shadow: 0 1px 0 0 #e9e9e9;
+    border-bottom: 1px solid #e9e9e9;
     padding: 0 15px;
 
     .navbar-wrapper {
