--- a/libs/components/footer/viz-footer.component.html
+++ b/libs/components/footer/viz-footer.component.html
@@ -17,6 +17,7 @@
   </div>
   <div class="footer-center">
     <p>Vizient MDA</p>
-    <p>&copy; 2018 Vizient & iLabs. All Rights Reserved.</p>
+    <!-- <p>&copy; 2018 Vizient & iLabs. All Rights Reserved.</p> -->
+    <p>&copy; 2018 Vizient. All Rights Reserved.</p>
   </div>
 </div>
