--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -11,26 +11,9 @@
 
 
 
-  <div class="docs-example-viewer-body" #exampleViewBody>
-
-    <!-- <iframe #iframe frameborder="0" height="100%" 
-      [ngClass]="{
-        'doc-example-viewer-phone': platform == 'phone_iphone',
-        'doc-example-viewer-tablet': platform == 'tablet_mac',
-        'doc-example-viewer-desktop': platform == 'desktop_mac'
-      }">
-
-    </iframe> -->
-
-
-    <!-- <iframe #iframe frameborder="0"></iframe> -->
-
-    <!-- <ng-container *ngComponentOutlet="exampleData.component"></ng-container> -->
+  <div class="docs-example-viewer-body" #exampleViewBody [ngClass]="getViewportClass()" >
+    <ng-container *ngComponentOutlet="exampleData.component"></ng-container>
     <!-- <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template> -->
-
-    <example-viewport [componentType]="exampleData.component" [platform]="platform"></example-viewport>
-
-
   </div>
 
   <div class="docs-example-viewer-source">
