--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -42,7 +42,7 @@
       justify-content: space-around;
       border-top: 1px solid #f8f8f8;
       margin: 0 100px;
-      padding: 50px 0;
+      padding: 50px 25px;
       &>div {
         width: 360px;
         .docs-feature-thumb {
