--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -17,13 +17,12 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    examples
+    Examples
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children.
-  </div>
+    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children.  </div>
   <div class="doc-example-container">
     <div app-docs-example="badge-basic"></div>
   </div>
@@ -106,14 +105,13 @@
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Badge should not block the over elements it support. Bagde should always stay on top and on the right of the main elements.
-  </div>
+    Badge should not block the over elements it support. Bagde should always stay on the right of the main elements.  </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-1.png" alt="">
+      <img src="assets/img/doc/badge-block-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-2.png" alt="">
+      <img src="assets/img/doc/badge-block-dont.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -121,10 +119,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-3.png" alt="">
+      <img src="assets/img/doc/badge-shadow-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-4.png" alt="">
+      <img src="assets/img/doc/badge-shadow-dont.png" alt="">
     </div>
   </div>
   <div class="doc-desc-2">
@@ -132,10 +130,10 @@
   </div>
   <div style="margin-bottom:24px">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-5.png" alt="">
+      <img src="assets/img/doc/badge-color-do.png" alt="">
     </div>
     <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-pic-6.png" alt="">
+      <img src="assets/img/doc/badge-color-dont.png" alt="">
     </div>
   </div>
   <div class="doc-divider"></div>
