--- a/src/assets/examples/chip-basic/chip-basic.component.html
+++ b/src/assets/examples/chip-basic/chip-basic.component.html
@@ -1,8 +1,7 @@
-
 <mat-chip-list>
-  <mat-chip>Input Chip</mat-chip>
   <mat-chip>
-    Choise Chip
+    Input Chip
     <mat-icon matChipRemove>cancel</mat-icon>
   </mat-chip>
+  <mat-chip>Choise Chip</mat-chip>
 </mat-chip-list>
