--- a/src/assets/examples/chip-primary/chip-primary.component.html
+++ b/src/assets/examples/chip-primary/chip-primary.component.html
@@ -1,7 +1,7 @@
 <mat-chip-list>
-    <mat-chip color="primary" selected>Input Chip</mat-chip>
     <mat-chip color="primary" selected>
-        Choise Chip
+        Input Chip
         <mat-icon matChipRemove>cancel</mat-icon>
     </mat-chip>
+    <mat-chip color="primary" selected>Choise Chip</mat-chip>
 </mat-chip-list>
