--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -12,8 +12,8 @@
 
 
   <div class="docs-example-viewer-body" #exampleViewBody [ngClass]="getViewportClass()" >
-    <ng-container *ngComponentOutlet="exampleData.component"></ng-container>
-    <!-- <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template> -->
+    <!-- <ng-container *ngComponentOutlet="exampleData.component"></ng-container> -->
+    <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template>
   </div>
 
   <div class="docs-example-viewer-source">
