--- a/src/assets/examples/badge-basic/badge-basic.component.html
+++ b/src/assets/examples/badge-basic/badge-basic.component.html
@@ -1,8 +1,2 @@
 <span matBadge="1" matBadgeOverlap="false">Text with a badge</span>
-
-<button mat-raised-button color="primary"
-    matBadge="255" matBadgePosition="above after" matBadgeColor="accent">
-  Button
-</button>
-
-<mat-icon matBadge="5" matBadgeColor="warn">calendar_today</mat-icon>
+<mat-icon matBadge="1000" matBadgeColor="warn" matBadgePosition="above after">folder</mat-icon>
