--- a/src/assets/examples/chip-primary/chip-primary.component.css
+++ b/src/assets/examples/chip-primary/chip-primary.component.css
@@ -1,5 +1,8 @@
-mat-chip-list{
-    display: flex;
-    justify-content: space-around;
-    margin-left: 100px
+mat-chip-list {
+  display: flex;
+  justify-content: space-around;
+  /* margin-left: 100px; */
+}
+.mat-chip {
+  margin-left: 24px;
 }
