--- a/src/document.scss
+++ b/src/document.scss
@@ -65,6 +65,7 @@ a {
   // height: 280px;
 }
 .doc-props-table {
+  width: 100%;
   border-collapse: collapse;
   thead {
     background-color: #f8f8f8;
