update example body style

--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -81,7 +81,7 @@
   border-bottom: 1px solid #efefef;
   width: 100%;
   // overflow-x: scroll;
-  overflow: auto;
+  // overflow: auto;
 }
 
 .doc-example-viewer-phone {
