Datepicker --> Width should be smaller (300px)

--- a/src/assets/examples/date-picker-basic/date-picker-basic.component.scss
+++ b/src/assets/examples/date-picker-basic/date-picker-basic.component.scss
@@ -2,7 +2,7 @@
   ::ng-deep {
     .mat-form-field-wrapper {
       width: 50%;
-      min-width: 300px;
+      max-width: 300px;
       margin: 0 auto;
     }
   }
