List --> Faulty Example

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -242,22 +242,34 @@ td.mat-cell, .mat-header-cell {
 .mat-list{
   // padding-top: 0px;
   .mat-list-item{
-    color: #696969;
+    // color: #696969;
     // background-color: #ffffff;
     // border-bottom: 1px solid gray;
     // &:first-child{
     //   border-top: 1px solid gray;
     // }
-    .mat-icon{
-      color: #9f9f9f;
-    }
+    // .mat-icon{
+    //   color: #9f9f9f;
+    // }
     .mat-list-item-content{
       color: #9f9f9f;
       font-family:Soleto;
+      font-weight:300;
     }
   }
 }
-
+.mat-selection-list{
+  .mat-list-item{
+    .mat-list-item-content{
+      .mat-list-text {
+        flex-direction: row;
+        color: #9f9f9f;
+        font-family:Soleto;
+        font-weight:300;
+      }
+    }
+  }
+}
 
 //snackbar style
 @media screen and (max-width: 375px) {
