--- a/src/assets/examples/list-basic/list-basic.component.html
+++ b/src/assets/examples/list-basic/list-basic.component.html
@@ -6,8 +6,8 @@
       <mat-divider></mat-divider>
       <ng-container *ngFor="let message of messages">
         <mat-list-item>
-          <mat-icon matListIcon>folder</mat-icon>
-          <h3> {{message}} </h3>
+          <mat-icon>folder</mat-icon>
+          {{message}}
         </mat-list-item>
         <mat-divider></mat-divider>
       </ng-container>
@@ -18,9 +18,9 @@
 
     <mat-selection-list #shoes>
       <mat-divider></mat-divider>
-      <ng-container *ngFor="let shoe of typesOfShoes">
+      <ng-container *ngFor="let message of messages">
         <mat-list-option>
-          {{shoe}}
+          {{message}}
         </mat-list-option>
         <mat-divider></mat-divider>
       </ng-container>
