Radio Button --> Wrong font size

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -281,3 +281,8 @@ td.mat-cell, .mat-header-cell {
     margin-top: 16px;
   }
 }
+
+//radio button
+.mat-radio-label-content{
+  font-size: 14px;
+}
