Tree	 --> Faulty Example: incorrect color and font weight Tree	 --> Faulty Example: Incorrect font size

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -286,3 +286,8 @@ td.mat-cell, .mat-header-cell {
 .mat-radio-label-content{
   font-size: 14px;
 }
+
+//tree style
+.mat-checkbox-label{
+  font-size: 14px;
+}
