Global: Footer	  -->  "Contact", "Vizient MDA", "Vizient" and "Additional Brands" should be on 1 line

--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -129,6 +129,9 @@
         width: 320px;
         margin:0 auto;
       }
+      .footer-center{
+        position: relative;
+      }
     }
   }
 }
