--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -14,13 +14,13 @@
 
   .footer-center {
     z-index: 1;
-    // position: absolute;
+    position: absolute;
     top: 48px;
     // height: 48px;
     left: 0;
     right: 0;
     text-align: center;
-    padding: 12px 0;
+    padding: 16px 0;
     @media (min-width: 768px) {
       top: 0;
     }
@@ -40,7 +40,6 @@
     background-color: transparent;
     padding-top: 16px;
     position: relative;
-    
     .footer-left {
       .nav {
         li {
