List  --> Faulty Example: Incorrect font size and weight, incorrect row height

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -255,6 +255,7 @@ td.mat-cell, .mat-header-cell {
       color: #9f9f9f;
       font-family:Soleto;
       font-weight:300;
+      font-size: 14px;
     }
   }
 }
@@ -266,6 +267,7 @@ td.mat-cell, .mat-header-cell {
         color: #9f9f9f;
         font-family:Soleto;
         font-weight:300;
+        font-size: 14px;
       }
     }
   }
