Global --> Have tooltip "Copy code" when hover the icon

--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -22,6 +22,7 @@
       <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension">
         <div class="docs-example-source-wrapper">
           <button mat-icon-button type="button" class="docs-example-source-copy" title="Copy example source" aria-label="Copy example source to clipboard"
+            matTooltip="Copy code"
             (click)="copySource(viewer.textContent)">
             <img src="assets/img/copy-icon.svg" alt="">
           </button>
