--- a/src/document.scss
+++ b/src/document.scss
@@ -233,8 +233,11 @@ a {
 .docs-mt24 {
   margin-top: 24px;
 }
+.docs-ml24 {
+  margin-left: 24px;
+}
 .docs-mb24 {
-  margin-top: 24px;
+  margin-bottom: 24px;
 }
 .docs-mt16 {
   margin-top: 16px;
