--- a/libs/components/select/viz-select.component.html
+++ b/libs/components/select/viz-select.component.html
@@ -33,10 +33,19 @@
 </div> -->
 
 
+<div class="viz-select-wrap">
+  <mat-form-field class="viz-select" [matMenuTriggerFor]="selectMenu" #selectTrigger="matMenuTrigger" [class.mat-focused]="selectTrigger.menuOpen">
+    <mat-label>{{placeholder}}</mat-label>
+    <input matInput type="text" placeholder="Clearable input" [value]="selected.title" autocomplete="off">
+    <button class="select-direction" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <mat-icon>arrow_drop_up</mat-icon>
+    </button>
+  </mat-form-field>
 
-<mat-form-field class="example-form-field">
-  <input matInput type="text" placeholder="Clearable input" [value]="value">
-  <button class="select-direction" mat-button matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-    <mat-icon >arrow_drop_up</mat-icon>
-  </button>
-</mat-form-field>
+
+  <mat-menu #selectMenu="matMenu" [overlapTrigger]=false class="viz-select-option">
+    <div (click)="$event.stopPropagation()">
+      <div class="viz-select-option-cell" *ngFor="let option of options; let i=index" (click)="selectOption(option)" [class.viz-select-option-cell-active]="selected.title == option.title">{{option.title}}</div>
+    </div>
+  </mat-menu>
+</div>
