--- a/src/app/shared/table-of-contents/table-of-contents.html
+++ b/src/app/shared/table-of-contents/table-of-contents.html
@@ -1,11 +1,15 @@
 <div *ngIf="links?.length" class="docs-toc-container">
+    <!-- <div class="docs-toc-heading">Contents</div> -->
   <nav>
-    <a [href]="_rootUrl + '#' + link.id"
+    <a 
+      [href]="_rootUrl + '#' + link.id"
       *ngFor="let link of links; let i = index"
       class="docs-level-{{link.type}} docs-link"
-      (click)="clickNav(i)"
-      [class.docs-active]="link.active">
+      [class.docs-active]="link.active"
+      (click)="clickNav(i)">
       {{link.name}}
     </a>
   </nav>
 </div>
+
+
