Add Card Component

--- a/src/assets/examples/card-basic/card-basic.component.html
+++ b/src/assets/examples/card-basic/card-basic.component.html
@@ -1,16 +1,42 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes
-      very well with mountainous terrain, the Shiba Inu was originally bred for hunting.
-    </p>
-  </mat-card-content>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+<mat-card class="benchmark-card">
+  <div class="benchmark">
+    <div class="benchmark-title">
+      New Patient Visit
+    </div>
+    <div class="benchmark-value">24.72%</div>
+    <div class="benchmark-targetwrap">
+      <div class="benchmark-targetvalue">22.30%</div>
+      <div class="benchmark-target">Benchmark target</div>
+    </div>
+
+  </div>
+
+  <div class="patient-information">
+    <div class="patient-title">
+      Your Opportunity
+    </div>
+    <div class="patient-subtitle">
+      Potential additional new patient visits
+    </div>
+    <div class="patient-value">
+      9,879
+    </div>
+    <div class="patient-title">
+      Performance Details
+    </div>
+    <div class="patient-subtitle">
+      Total number of new patient visits / Total visits
+    </div>
+    <div class="patient-value">
+      38,403 / 169,340
+    </div>
+
+    <button mat-raised-button color="primary">Drilldown</button>
+
+
+
+  </div>
+
+
+
 </mat-card>
