--- a/src/assets/documents/components/card.html
+++ b/src/assets/documents/components/card.html
@@ -4,16 +4,19 @@
 
 <body>
   <div class="doc-category-title">
-    Button & Indicatiors
+    Layout
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Badge
+    Card
   </div>
   <div class="doc-desc-1">
-    Badges are small status descriptors for UI elements. A badge consists of a small circle, typically containing a number or
-    other short set of characters, that appears in proximity to another object.
+    <p>A card is a sheet of material that serves as an entry point to more detailed information.
+    </p>
+    <p>Cards display content composed of different elements whose size or supported actions vary.</p>
+    <p>Cards are a convenient means of displaying content composed of different elements. They’re also well-suited for showcasing
+      elements whose size or supported actions vary, like photos with captions of variable length.</p>
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -22,13 +25,14 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Examples of badges containing text, using primary and secondary colors. The badge is applied to its children. </div>
+    Although cards can support multiple actions, UI controls, and an overflow menu, use restraint and remember that cards are
+    entry points to more complex and detailed information.</div>
   <div class="doc-example-container">
     <div app-docs-example="card-basic"></div>
   </div>
   <div class="doc-divider">
   </div>
-  <div class="doc-title-2">
+  <!-- <div class="doc-title-2">
     Props
     <span class="docs-markdown-h3" id="props">
       <span header-link="props"></span>Props</span>
@@ -79,7 +83,7 @@
       </tr>
     </tbody>
   </table>
-  <div class="doc-divider"></div>
+  <div class="doc-divider"></div> -->
   <div class="doc-title-2">
     Best Practices
     <span class="docs-markdown-h3" id="best_practices">
@@ -87,13 +91,16 @@
   </div>
 
   <div class="doc-desc-2">
-    Badges should:
+    <p>Cards are surfaces that display content and actions on a single topic.</p>
+    <p>They should be easy to scan for relevant and actionable information. Elements, like text and images, should be placed
+      on them in a way that clearly indicates hierarchy.</p>
     <ul class="doc-list">
-      <li>Use established and right colors appropriately in each case.</li>
-      <li>Be positioned in consistent locations in the interface. The badge should always be close to the element that it supports</li>
+      <li>Contained: A card is identifiable as a single, contained unit.</li>
+      <li>Independent: A card can stand alone, without relying on surrounding elements for context.</li>
+      <li>Individual: A card cannot merge with another card, or divide into multiple cards.</li>
     </ul>
   </div>
-
+ 
   <div class="doc-divider">
 
   </div>
@@ -105,46 +112,24 @@
       <span header-link="content_guidelines"></span>Content guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Badge should not block the over elements it support. Bagde should always stay on the right of the main elements. </div>
+      On desktop and mobile, cards can have a resting elevation of 1dp. They elevate to 8dp on hover.</div>
   <div style="margin-bottom:24px">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-block-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:537px">
+      <img src="assets/img/doc/card-do.png" alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-block-dont.png" alt="">
-    </div>
-  </div>
-  <div class="doc-desc-2">
-    Do not add shadow to the badge.
-  </div>
-  <div style="margin-bottom:24px">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-shadow-do.png" alt="">
-    </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-shadow-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:537px">
+      <img src="assets/img/doc/card-dont.png" alt="">
     </div>
   </div>
-  <div class="doc-desc-2">
-    Do not use the same color as the main elements.
-  </div>
-  <div style="margin-bottom:24px">
-    <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-color-do.png" alt="">
-    </div>
-    <div class="docs-usage-dont docs-usage-w50 docs-usage-center" style="height:160px">
-      <img src="assets/img/doc/badge-color-dont.png" alt="">
-    </div>
-  </div>
-  <div class="doc-divider"></div>
+  
   <div class="doc-title-2">
     Design specs
     <span class="docs-markdown-h3" id="design_specs">
       <span header-link="design_specs"></span>Design specs</span>
   </div>
 
-  <div class="docs-usage-spec docs-usage-center" style="height:280px">
-    <img src="assets/img/doc/badge-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center" style="height:600px">
+    <img src="assets/img/doc/card-spec.png" alt="">
   </div>
 
 
