--- a/src/assets/examples/tree-basic/tree-basic.component.html
+++ b/src/assets/examples/tree-basic/tree-basic.component.html
@@ -1,6 +1,6 @@
 <viz-tree [tree]="tree">
-
   <ng-container *VizTreeLeafDef="let node">
+    <button mat-icon-button disabled></button>
     <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
   </ng-container>
 
@@ -15,5 +15,4 @@
     </button>
     <mat-checkbox [checked]="descendantsAllSelected(node)" [indeterminate]="descendantsPartiallySelected(node)" (change)="toggle(node)">{{node.name}}</mat-checkbox>
   </ng-container>
-
 </viz-tree>
