Fix bug : Chips --> For input chip, when click "x", it should be removed/disappeared

--- a/src/assets/examples/chip-basic/chip-basic.component.html
+++ b/src/assets/examples/chip-basic/chip-basic.component.html
@@ -1,7 +1,7 @@
 <mat-chip-list>
-  <mat-chip>
+  <mat-chip *ngIf="chip" removable (removed)="remove()" >
     Input Chip
-    <mat-icon matChipRemove>cancel</mat-icon>
+    <mat-icon matChipRemove >cancel</mat-icon>
   </mat-chip>
   <mat-chip>Choise Chip</mat-chip>
 </mat-chip-list>
