--- a/src/app/shared/table-of-contents/table-of-contents.html
+++ b/src/app/shared/table-of-contents/table-of-contents.html
@@ -1,15 +1,20 @@
-<div *ngIf="links?.length" class="docs-toc-container">
-    <!-- <div class="docs-toc-heading">Contents</div> -->
+<!-- <div *ngIf="links?.length" class="docs-toc-container">
+  <div class="docs-toc-heading">Contents</div>
   <nav>
-    <a 
-      [href]="_rootUrl + '#' + link.id"
-      *ngFor="let link of links; let i = index"
-      class="docs-level-{{link.type}} docs-link"
-      [class.docs-active]="link.active"
-      (click)="clickNav(i)">
+    <a [href]="_rootUrl + '#' + link.id" *ngFor="let link of links; let i = index" class="docs-level-{{link.type}} docs-link"
+      [class.docs-active]="link.active" (click)="clickNav(i)">
+      {{link.name}}
+    </a>
+  </nav>
+</div> -->
+
+
+<div *ngIf="links?.length" class="docs-toc-container">
+  <div class="docs-toc-heading">Contents</div>
+  <nav>
+    <a *ngFor="let link of links; let i = index" class="docs-level-{{link.type}} docs-link"
+      [class.docs-active]="link.active" (click)="redirect(link.id)">
       {{link.name}}
     </a>
   </nav>
 </div>
-
-
