--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,8 +12,10 @@
           height: 72px;
           font-size: 13px;
           padding: 0 0 0 0;
-          margin-right: 30px;
-          min-width: 100px;
+          // margin-right: 30px;
+          // min-width: 100px;
+          padding: 0px 24px;
+          min-width: auto;
 
           /* Components: */
           font-family: Soleto;
