Fix bug : Select --> Incorrect expample. Please see reference

--- a/src/assets/examples/select-basic/select-basic.component.html
+++ b/src/assets/examples/select-basic/select-basic.component.html
@@ -1,1 +1,1 @@
-<viz-select [options]="options" placeholder='Select Component'></viz-select>
+<viz-select [options]="options" placeholder='Date Type'></viz-select>
