--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -16,10 +16,10 @@
     <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template>
   </div>
 
-  <div class="docs-example-viewer-source">
-    <mat-tab-group>
+  <div class="docs-example-viewer-source" [@.disabled]="true">
+    <mat-tab-group >
       <!-- TODO(jelbourn): don't hard-code the html + ts + css structure -->
-      <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension">
+      <mat-tab *ngFor="let extension of ['HTML', 'TS']" [label]="extension === 'TS' ? 'AngularJS' : extension" >
         <div class="docs-example-source-wrapper">
           <button mat-icon-button type="button" class="docs-example-source-copy" title="Copy example source" aria-label="Copy example source to clipboard"
             matTooltip="Copy code"
