--- a/src/app/pages/homepage/homepage.scss
+++ b/src/app/pages/homepage/homepage.scss
@@ -4,8 +4,10 @@
     
     .home-sec-1 {
       display: flex;
-      justify-content: space-around;
-      padding: 50px 100px;
+      // justify-content: space-around;
+      // padding: 50px 100px; 
+      justify-content: space-between;
+      padding: 50px 9.375vw; 
       .text-item {
         padding-top: 50px;
         width: 50%;
@@ -39,10 +41,12 @@
     }
     .home-sec-2 {
       display: flex;
-      justify-content: space-around;
+      // justify-content: space-around;
       border-top: 1px solid #f8f8f8;
-      margin: 0 100px;
-      padding: 50px 25px;
+      // margin: 0 100px;
+      // padding: 50px 25px;
+      justify-content: space-between;
+      padding: 50px 9.375vw;
       &>div {
         width: 360px;
         .docs-feature-thumb {
