--- a/src/document.scss
+++ b/src/document.scss
@@ -246,6 +246,7 @@ a {
   font-size: 16px;
   font-weight: bold;
   margin-bottom: 15px;
+  color: #000000
 }
 .doc-code-sec {
   margin: 0 0 30px 0;
