Fix bug : Global: Responsive icons --> Icon font size should be 18px instead of 24px -> bouding box should be 18x18px. Margin in between the icons should be 12px. Please see reference link

--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -3,9 +3,14 @@
   <div class="docs-example-platform">
 
 
-    <button mat-icon-button *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index" (click)="platform = item;">
+    <!-- <button mat-icon-button *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index" (click)="platform = item;">
       <mat-icon [ngClass]="{'active': platform == item }">{{item}}</mat-icon>
-    </button>
+    </button> -->
+
+
+    <mat-icon [ngClass]="{'active': platform == item }" *ngFor="let item of ['desktop_mac','tablet_mac','phone_iphone']; let i=index" (click)="platform = item;">{{item}}</mat-icon>
+
+
 
   </div>
 
