--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -20,12 +20,13 @@
 
 .docs-example-platform {
   float: right;
-  margin-top: 8px;
+  margin-top: 16px;
   margin-right: 24px;
   color: #c3c3c3;
   .mat-icon-button {
     // margin-left: 12px;
   }
+  
   .active {
     color: #000000;
   }
@@ -102,7 +103,7 @@
   
   .mat-icon {
     @include md-icon-size(18px) ;
-    margin-right: 12px;
+    margin-left: 12px;
     cursor: pointer;
   }
   .header-basic {
